No Bug - Import translations from https://github.com/mozilla-l10n/android-l10n CLOSED TREE
UltraBlame original commit: 602e355fa5eb129c66e1d34a01c23e0b7973758c

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sq/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sq/strings.xml
@@ -215,6 +215,345 @@ on
 requires
 access
 to
+more
+than
+4
+sites
+for
+example
+the
+add
+-
+on
+requires
+access
+for
+5
+sites
+.
+We
+will
+show
+the
+first
+4
+sites
+in
+individual
+entries
+as
+in
+mozac_feature_addons_permissions_one_site_description
+then
+we
+will
+show
+another
+collapsed
+entry
+saying
+"
+Access
+your
+data
+on
+another
+site
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_one_extra_site_description_2
+"
+>
+T
+hyj
+n
+t
+dh
+nat
+tuaja
+te
+sajt
+tjet
+r
+<
+/
+string
+>
+<
+!
+-
+-
+When
+an
+add
+-
+on
+requires
+access
+to
+more
+than
+4
+sites
+for
+example
+the
+add
+-
+on
+requires
+access
+for
+6
+sites
+.
+We
+will
+show
+the
+first
+4
+sites
+in
+individual
+entries
+as
+in
+mozac_feature_addons_permissions_one_site_description
+then
+we
+will
+show
+another
+collapsed
+entry
+saying
+"
+Access
+your
+data
+on
+other
+sites
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_extra_sites_description_2
+"
+>
+T
+hyj
+n
+t
+dh
+nat
+tuaja
+te
+sajte
+t
+tjer
+<
+/
+string
+>
+<
+!
+-
+-
+When
+an
+add
+-
+on
+requires
+access
+to
+more
+than
+4
+domains
+for
+example
+the
+add
+-
+on
+requires
+access
+for
+5
+domains
+.
+We
+will
+show
+the
+first
+4
+domains
+in
+individual
+entries
+as
+in
+mozac_feature_addons_permissions_sites_in_domain_description
+then
+we
+will
+show
+another
+collapsed
+entry
+saying
+"
+Access
+your
+data
+on
+another
+domain
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_one_extra_domain_description_2
+"
+>
+T
+hyj
+n
+t
+dh
+nat
+tuaja
+te
+p
+rkat
+si
+tjet
+r
+<
+/
+string
+>
+<
+!
+-
+-
+When
+an
+add
+-
+on
+requires
+access
+to
+more
+than
+4
+domains
+for
+example
+the
+add
+-
+on
+requires
+access
+for
+6
+domains
+.
+We
+will
+show
+the
+first
+4
+domains
+in
+individual
+entries
+as
+in
+mozac_feature_addons_permissions_sites_in_domain_description
+then
+we
+will
+show
+another
+collapsed
+entry
+saying
+"
+Access
+your
+data
+on
+other
+domains
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_extra_domains_description_plural_2
+"
+>
+T
+hyj
+n
+t
+dh
+nat
+tuaja
+te
+p
+rkat
+si
+t
+tjera
+<
+/
+string
+>
+<
+!
+-
+-
+When
+an
+add
+-
+on
+requires
+access
+to
 domains
 this
 entry
@@ -1430,6 +1769,1377 @@ string
 !
 -
 -
+Description
+for
+the
+"
+privacy
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_privacy_description_for_update
+"
+>
+T
+lexoj
+dhe
+ndryshoj
+rregullime
+privat
+sie
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+<
+all_urls
+>
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_all_urls_description_for_update
+"
+>
+T
+hyj
+n
+t
+dh
+nat
+tuaja
+p
+r
+krejt
+sajtet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+tabs
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_tabs_description_for_update
+"
+>
+T
+hyj
+n
+skeda
+shfletuesi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+webNavigation
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_web_navigation_description_for_update
+"
+>
+T
+hyj
+n
+veprimtarin
+e
+shfletuesit
+gjat
+l
+vizjeve
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+bookmarks
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_bookmarks_description_for_update
+"
+>
+Lexoni
+dhe
+ndryshoni
+faqerojt
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+browserSettings
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_browser_settings_description_for_update
+"
+>
+T
+lexoj
+dhe
+ndryshoj
+rregullime
+shfletuesi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+browsingData
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_browsing_data_description_for_update
+"
+>
+T
+spastroj
+historikun
+e
+shfletimeve
+s
+fundi
+cookies
+dhe
+t
+dh
+nat
+p
+rkat
+se
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+clipboardRead
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_clipboard_read_description_for_update
+"
+>
+T
+marr
+t
+dh
+na
+nga
+e
+papastra
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+clipboardWrite
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_clipboard_write_description_for_update
+"
+>
+T
+fus
+t
+dh
+na
+n
+t
+papast
+r
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+declarativeNetRequest
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_declarative_net_request_description_for_update
+"
+>
+T
+bllokoj
+l
+nd
+n
+far
+do
+faqe
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+declarativeNetRequestFeedback
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_declarative_net_request_feedback_description_for_update
+"
+>
+T
+lexoj
+historikun
+tuaj
+t
+shfletimit
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+downloads
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_downloads_description_for_update
+"
+>
+T
+shkarkoj
+kartela
+dhe
+t
+lexoj
+dhe
+ndryshoj
+historikun
+e
+shkarkimeve
+t
+shfletuesit
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+downloads
+.
+open
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_downloads_open_description_for_update
+"
+>
+T
+hap
+kartela
+t
+shkarkuara
+n
+pajisjen
+tuaj
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+find
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_find_description_for_update
+"
+>
+T
+lexoj
+tekstin
+e
+krejt
+skedave
+t
+hapura
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+geolocation
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_geolocation_description_for_update
+"
+>
+T
+njoh
+dhe
+p
+rdor
+vendndodhjen
+tuaj
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+history
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_history_description_for_update
+"
+>
+T
+hyj
+n
+historik
+shfletimesh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+management
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_management_description_for_update
+"
+>
+T
+mbik
+qyr
+p
+rdorimin
+e
+zgjerimeve
+dhe
+administroj
+tema
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+nativeMessaging
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_native_messaging_description_for_update
+"
+>
+T
+shk
+mbej
+mesazhe
+me
+programe
+t
+tjer
+nga
+ky
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+notifications
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_notifications_description_for_update
+"
+>
+T
+ju
+shfaq
+njoftime
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+proxy
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_proxy_description_for_update
+"
+>
+T
+kontrolloj
+rregullime
+nd
+rmjet
+si
+te
+shfletuesi
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+"
+sessions
+"
+WebExtensions
+API
+permission
+for
+the
+update
+notification
+.
+Multiple
+permissions
+may
+be
+simply
+appended
+one
+after
+the
+other
+and
+separated
+with
+a
+space
+which
+is
+why
+the
+period
+is
+important
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_sessions_description_for_update
+"
+>
+T
+hyj
+te
+skeda
+t
+mbyllura
+s
+fundi
+.
+<
+/
+string
+>
+<
+!
+-
+-
 The
 text
 shown
@@ -1488,6 +3198,162 @@ u
 zini
 bes
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+sentence
+used
+when
+the
+extension
+has
+data
+collection
+permissions
+.
+%
+1
+s
+is
+a
+formatted
+list
+of
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_required_data_collection_description_2
+"
+>
+Zhvilluesi
+thot
+se
+ky
+zgjerim
+mbledh
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+The
+sentence
+used
+when
+the
+developer
+of
+an
+extension
+has
+explicitly
+stated
+that
+they
+do
+not
+collect
+any
+data
+collection
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_none_required_data_collection_description
+"
+>
+Zhvilluesi
+thot
+se
+ky
+zgjerim
+s
+lyp
+mbledhje
+t
+dh
+nash
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+sentence
+used
+when
+the
+extension
+requests
+new
+data
+collection
+permissions
+.
+%
+1
+s
+is
+a
+formatted
+list
+of
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_optional_description
+"
+>
+Zhvilluesi
+thot
+se
+ky
+zgjerim
+d
+shiron
+t
+mbledh
+:
+%
+1
+s
 <
 /
 string
@@ -1558,6 +3424,561 @@ Shfaq
 m
 pak
 sajte
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+authenticationInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_authenticationInfo_short_description
+"
+>
+holl
+si
+mir
+fillt
+simi
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+bookmarksInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_bookmarksInfo_short_description
+"
+>
+faqerojt
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+browsingActivity
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_browsingActivity_short_description
+"
+>
+veprimtari
+shfletimi
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+financialAndPaymentInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_financialAndPaymentInfo_short_description
+"
+>
+holl
+si
+pagesash
+dhe
+financiare
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+healthInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_healthInfo_short_description
+"
+>
+holl
+si
+sh
+ndet
+sore
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+locationInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_locationInfo_short_description
+"
+>
+vendndodhje
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+personalCommunications
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_personalCommunications_short_description
+"
+>
+komunikime
+personale
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+personallyIdentifyingInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_personallyIdentifyingInfo_short_description
+"
+>
+holl
+si
+q
+lejojn
+identifikim
+personal
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+searchTerms
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_searchTerms_short_description
+"
+>
+terma
+k
+rkimi
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+technicalAndInteraction
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_technicalAndInteraction_short_description
+"
+>
+t
+dh
+na
+teknike
+dhe
+nd
+rveprimesh
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+websiteActivity
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_websiteActivity_short_description
+"
+>
+veprimtari
+sajti
+<
+/
+string
+>
+<
+!
+-
+-
+Short
+description
+for
+the
+websiteContent
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_websiteContent_short_description
+"
+>
+l
+nd
+sajti
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+description
+for
+the
+authenticationInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_authenticationInfo_long_description
+"
+>
+T
+i
+jap
+zhvilluesit
+t
+zgjerimit
+holl
+si
+mir
+fillt
+simi
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+description
+for
+the
+bookmarksInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_bookmarksInfo_long_description
+"
+>
+T
+i
+jap
+zhvilluesit
+t
+zgjerimit
+holl
+si
+faqerojt
+sisht
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+description
+for
+the
+browsingActivity
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_browsingActivity_long_description
+"
+>
+T
+i
+jap
+zhvilluesit
+t
+zgjerimit
+holl
+si
+veprimtarie
+shfletimi
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+description
+for
+the
+financialAndPaymentInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_financialAndPaymentInfo_long_description
+"
+>
+T
+i
+jap
+zhvilluesit
+t
+zgjerimit
+holl
+si
+pagesash
+dhe
+financiare
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+description
+for
+the
+healthInfo
+data
+collection
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_data_collection_healthInfo_long_description
+"
+>
+T
+i
+jap
+zhvilluesit
+t
+zgjerimit
+holl
+si
+sh
+ndet
+sore
 <
 /
 string
