--- a/mobile/android/android-components/components/feature/downloads/src/main/res/values-it/strings.xml
+++ b/mobile/android/android-components/components/feature/downloads/src/main/res/values-it/strings.xml
@@ -456,6 +456,53 @@ Alert
 dialog
 confirmation
 before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+title
+when
+the
+size
+of
+the
+file
+is
+not
+known
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_again_dialog_title_with_unknown_size
+"
+>
+Scaricare
+nuovamente
+il
+file
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
 download
 a
 file
@@ -598,6 +645,50 @@ s
 gi
 presente
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+neutral
+action
+that
+proposes
+to
+open
+the
+file
+instead
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_open_existing_file
+"
+>
+Apri
+file
+esistente
 <
 /
 string
