--- a/mobile/android/android-components/components/feature/downloads/src/main/res/values-nl/strings.xml
+++ b/mobile/android/android-components/components/feature/downloads/src/main/res/values-nl/strings.xml
@@ -451,6 +451,52 @@ Alert
 dialog
 confirmation
 before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+title
+when
+the
+size
+of
+the
+file
+is
+not
+known
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_again_dialog_title_with_unknown_size
+"
+>
+Bestand
+opnieuw
+downloaden
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
 download
 a
 file
@@ -592,6 +638,50 @@ s
 bestaat
 al
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+neutral
+action
+that
+proposes
+to
+open
+the
+file
+instead
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_open_existing_file
+"
+>
+Bestaand
+bestand
+openen
 <
 /
 string
