--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-sq/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-sq/strings.xml
@@ -2299,6 +2299,37 @@ string
 !
 -
 -
+Pressing
+this
+will
+dismiss
+the
+dialog
+and
+disallow
+to
+upload
+folder
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_folder_upload_confirm_negative_button_text
+"
+>
+Anuloje
+<
+/
+string
+>
+<
+!
+-
+-
 Credit
 Card
 Autofill
