--- a/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
@@ -39666,15 +39666,17 @@ ast
 j
 probl
 my
-s
-webem
+se
+str
+nkami
 .
 Pokud
-jej
+ho
 vypnete
 n
 kter
-weby
+str
+nky
 nemus
 fungovat
 a
@@ -39683,15 +39685,15 @@ a
 s
 nebude
 moci
-pomoci
 s
-e
-en
+odstran
+n
 m
 t
 chto
 probl
 m
+pomoci
 .
 <
 /
