--- a/mobile/android/fenix/app/src/main/res/values-de/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-de/strings.xml
@@ -47002,7 +47002,7 @@ UnusedResources
 >
 Dorf
 oder
-Gemeinde
+Township
 <
 /
 string
@@ -47721,6 +47721,70 @@ UnusedResources
 Do
 /
 Si
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+an
+address
+field
+(
+e
+.
+g
+.
+mailing
+address
+)
+used
+as
+part
+of
+the
+form
+autofill
+feature
+.
+Used
+in
+countries
+like
+Nicaragua
+and
+Colombia
+where
+departments
+are
+a
+key
+administrative
+division
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addresses_department
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Departamento
 <
 /
 string
