--- a/mobile/android/fenix/app/src/main/res/values-fa/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fa/strings.xml
@@ -6965,6 +6965,42 @@ for
 the
 link
 in
+onboarding_redesign_tou_body_one
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_redesign_tou_body_one_link_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Used
+as
+text
+for
+the
+link
+in
 onboarding_redesign_tou_body_three
 .
 -
@@ -13457,6 +13493,56 @@ string
 !
 -
 -
+Title
+for
+the
+"
+Other
+"
+group
+of
+alternative
+app
+icon
+variants
+in
+the
+icon
+picker
+screen
+.
+This
+group
+includes
+retro
+pixel
+art
+themed
+and
+artist
+-
+created
+icons
+.
+-
+-
+>
+<
+string
+name
+=
+"
+alternative_app_icon_group_other
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Add
 -
 ons
@@ -14890,6 +14976,40 @@ name
 =
 "
 preferences_daily_usage_ping_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+crash
+reporting
+option
+in
+the
+privacy
+preferences
+dialog
+shown
+during
+onboarding
+.
+-
+-
+>
+<
+string
+name
+=
+"
+crash_reporting_snack_bar_message
 "
 >
 <
@@ -20274,6 +20394,43 @@ string
 -
 -
 The
+button
+text
+for
+navigating
+to
+the
+SUMO
+link
+to
+learn
+more
+about
+reporting
+a
+broken
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+webcompat_reporter_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
 text
 field
 label
@@ -20632,6 +20789,39 @@ ignore
 =
 "
 UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+a
+snackbar
+to
+confirm
+the
+successful
+submission
+of
+a
+WebCompat
+report
+.
+-
+-
+>
+<
+string
+name
+=
+"
+webcompat_reporter_success_snackbar_text_2
 "
 >
 <
@@ -35618,6 +35808,204 @@ name
 =
 "
 addresses_email
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+an
+address
+field
+(
+e
+.
+g
+.
+mailing
+address
+)
+used
+as
+part
+of
+the
+form
+autofill
+feature
+.
+This
+specific
+field
+is
+used
+for
+addresses
+in
+Iran
+Mexico
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addresses_neighborhood
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+an
+address
+field
+(
+e
+.
+g
+.
+mailing
+address
+)
+used
+as
+part
+of
+the
+form
+autofill
+feature
+.
+The
+Island
+field
+used
+in
+places
+like
+the
+Cayman
+Islands
+and
+the
+Bahamas
+if
+an
+address
+is
+located
+on
+a
+specific
+island
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addresses_island
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+an
+address
+field
+(
+e
+.
+g
+.
+mailing
+address
+)
+used
+as
+part
+of
+the
+form
+autofill
+feature
+.
+Used
+in
+cases
+we
+want
+to
+only
+display
+the
+word
+"
+Country
+"
+over
+"
+Country
+or
+Region
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addresses_country_only
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
