--- a/mobile/android/android-components/components/feature/downloads/src/main/res/values-fy-rNL/strings.xml
+++ b/mobile/android/android-components/components/feature/downloads/src/main/res/values-fy-rNL/strings.xml
@@ -455,6 +455,53 @@ Alert
 dialog
 confirmation
 before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+title
+when
+the
+size
+of
+the
+file
+is
+not
+known
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_again_dialog_title_with_unknown_size
+"
+>
+Best
+n
+opnij
+downloade
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
 download
 a
 file
@@ -596,6 +643,51 @@ s
 bestiet
 al
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+neutral
+action
+that
+proposes
+to
+open
+the
+file
+instead
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_open_existing_file
+"
+>
+Besteande
+best
+n
+iepenje
 <
 /
 string
