--- a/mobile/android/android-components/components/feature/downloads/src/main/res/values-hu/strings.xml
+++ b/mobile/android/android-components/components/feature/downloads/src/main/res/values-hu/strings.xml
@@ -475,6 +475,55 @@ Alert
 dialog
 confirmation
 before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+title
+when
+the
+size
+of
+the
+file
+is
+not
+known
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_again_dialog_title_with_unknown_size
+"
+>
+F
+jl
+let
+lt
+se
+jra
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
 download
 a
 file
@@ -627,6 +676,53 @@ r
 l
 tezik
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+neutral
+action
+that
+proposes
+to
+open
+the
+file
+instead
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_open_existing_file
+"
+>
+Megl
+v
+f
+jl
+megnyit
+sa
 <
 /
 string
