--- a/mobile/android/android-components/components/feature/sitepermissions/src/main/res/values-sq/strings.xml
+++ b/mobile/android/android-components/components/feature/sitepermissions/src/main/res/values-sq/strings.xml
@@ -19,6 +19,38 @@ utf
 >
 <
 resources
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
+xmlns
+:
+moz
+=
+"
+http
+:
+/
+/
+mozac
+.
+org
+/
+tools
+"
 >
 <
 !
@@ -482,6 +514,127 @@ string
 !
 -
 -
+Alternate
+variant
+of
+the
+text
+for
+a
+negative
+button
+in
+a
+permission
+request
+dialog
+this
+button
+will
+not
+give
+access
+to
+this
+permission
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_sitepermissions_block
+"
+>
+Bllokoje
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+label
+in
+a
+notification
+permission
+request
+dialog
+to
+dismiss
+the
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_sitepermissions_notification_permission_rationale_dialog_dismiss_label
+"
+>
+Anuloje
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+label
+in
+a
+notification
+permission
+request
+dialog
+.
+It
+will
+let
+the
+user
+go
+to
+Android
+Settings
+to
+grant
+the
+permission
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_sitepermissions_notification_permission_rationale_dialog_settings_label
+"
+>
+Shko
+te
+rregullimet
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 a
@@ -514,6 +667,110 @@ mozac_feature_sitepermissions_do_not_ask_again_on_this_site2
 Mbaje
 mend
 vendimin
+p
+r
+k
+t
+sajt
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+a
+checkbox
+in
+a
+permission
+request
+dialog
+this
+will
+allow
+to
+not
+show
+again
+the
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_sitepermissions_do_not_ask_again_on_this_site3
+"
+moz
+:
+removedIn
+=
+"
+144
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Mos
+pyet
+s
+rish
+p
+r
+k
+t
+sajt
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+a
+checkbox
+in
+a
+permission
+request
+dialog
+this
+will
+allow
+to
+not
+show
+again
+the
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_sitepermissions_do_not_ask_again_on_this_site4
+"
+>
+Mbaje
+mend
 p
 r
 k
