--- a/mobile/android/android-components/components/lib/crash/src/main/res/values-sq/strings.xml
+++ b/mobile/android/android-components/components/lib/crash/src/main/res/values-sq/strings.xml
@@ -645,6 +645,112 @@ t
 string
 >
 <
+!
+-
+-
+String
+for
+Ask
+before
+sending
+crash
+reports
+radio
+button
+in
+Data
+Collection
+Screen
+-
+-
+>
+<
+string
+name
+=
+"
+crash_reporting_ask
+"
+>
+Pyet
+para
+d
+rgimit
+<
+/
+string
+>
+<
+!
+-
+-
+String
+for
+Send
+crash
+reports
+automatically
+radio
+button
+in
+Data
+Collection
+Screen
+-
+-
+>
+<
+string
+name
+=
+"
+crash_reporting_auto
+"
+>
+D
+rgoje
+automatikisht
+<
+/
+string
+>
+<
+!
+-
+-
+String
+for
+Never
+sending
+crash
+reports
+radio
+button
+in
+Data
+Collection
+Screen
+-
+-
+>
+<
+string
+name
+=
+"
+crash_reporting_never
+"
+>
+Mos
+e
+d
+rgo
+kurr
+<
+/
+string
+>
+<
 /
 resources
 >
