--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-sq/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-sq/strings.xml
@@ -143,6 +143,75 @@ string
 !
 -
 -
+Message
+announced
+to
+the
+user
+when
+the
+tab
+counter
+is
+selected
+in
+private
+browsing
+mode
+.
+Used
+by
+a11y
+services
+.
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_private
+"
+>
+Skeda
+Private
+t
+Hapura
+:
+%
+1
+s
+.
+Prekeni
+q
+t
+nd
+rroni
+skeda
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
