--- a/mobile/android/focus-android/app/src/main/res/values-sq/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-sq/strings.xml
@@ -2152,6 +2152,8 @@ kontroll
 /
 p
 >
+\
+n
 <
 p
 >
@@ -2162,9 +2164,13 @@ nj
 shfletues
 privat
 :
+\
+n
 <
 ul
 >
+\
+n
 <
 li
 >
@@ -2180,6 +2186,8 @@ aplikacioni
 /
 li
 >
+\
+n
 <
 li
 >
@@ -2200,6 +2208,8 @@ gjurmuesish
 /
 li
 >
+\
+n
 <
 li
 >
@@ -2217,6 +2227,8 @@ shfletimesh
 /
 li
 >
+\
+n
 <
 /
 ul
@@ -2225,6 +2237,8 @@ ul
 /
 p
 >
+\
+n
 <
 p
 >
@@ -2254,6 +2268,8 @@ t
 br
 /
 >
+\
+n
 <
 a
 href
@@ -2282,6 +2298,42 @@ p
 ]
 ]
 >
+<
+/
+string
+>
+<
+!
+-
+-
+A
+link
+to
+SUMO
+at
+the
+bottom
+of
+About
+Focus
+screen
+.
+-
+-
+>
+<
+string
+name
+=
+"
+about_screen_learn_more
+"
+>
+M
+soni
+m
+tep
+r
 <
 /
 string
@@ -7330,6 +7382,216 @@ Pa
 shp
 rqendrime
 .
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+first
+screen
+'
+terms
+of
+use
+'
+text
+%
+1
+s
+will
+be
+replaced
+by
+a
+link
+using
+onboarding_first_screen_terms_of_use_link
+as
+text
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_terms_of_use_text_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Duke
+vazhduar
+pajtoheni
+me
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+first
+screen
+'
+terms
+of
+use
+link
+'
+Text
+for
+the
+link
+used
+in
+onboarding_first_screen_terms_of_use_text
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_terms_of_use_link_2
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Terma
+P
+rdorimi
+Firefox
+-
+i
+<
+/
+string
+>
+<
+!
+-
+-
+New
+Onboarding
+flow
+first
+screen
+'
+privacy
+notice
+'
+text
+%
+1
+s
+will
+be
+replaced
+by
+a
+link
+using
+onboarding_first_screen_privacy_notice_link
+as
+text
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_privacy_notice_text_2
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Firefox
+-
+i
+kujdeset
+p
+r
+privat
+sin
+tuaj
+.
+M
+soni
+m
+tep
+r
+te
+%
+1
+s
+i
+yni
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+link
+used
+in
+onboarding_first_screen_privacy_notice_text
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_first_screen_privacy_notice_link_2
+"
+>
+Sh
+nim
+Mbi
+Privat
+sin
 <
 /
 string
@@ -14552,6 +14814,8 @@ br
 <
 br
 >
+\
+n
 <
 label
 >
