No Bug - Import translations from https://github.com/mozilla-l10n/android-l10n CLOSED TREE
UltraBlame original commit: f56e338eefb72e9dc82844a11ea35ca2e268ec0f

--- a/mobile/android/android-components/components/feature/downloads/src/main/res/values-vi/strings.xml
+++ b/mobile/android/android-components/components/feature/downloads/src/main/res/values-vi/strings.xml
@@ -494,6 +494,58 @@ Alert
 dialog
 confirmation
 before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+title
+when
+the
+size
+of
+the
+file
+is
+not
+known
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_again_dialog_title_with_unknown_size
+"
+>
+T
+i
+xu
+ng
+l
+i
+t
+p
+tin
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
 download
 a
 file
@@ -646,6 +698,54 @@ n
 t
 i
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Alert
+dialog
+confirmation
+before
+downloading
+a
+previously
+downloaded
+file
+this
+is
+the
+neutral
+action
+that
+proposes
+to
+open
+the
+file
+instead
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_downloads_open_existing_file
+"
+>
+M
+t
+p
+tin
+hi
+n
+c
 <
 /
 string
