--- a/mobile/android/fenix/app/src/main/res/values-lo/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-lo/strings.xml
@@ -12144,6 +12144,54 @@ string
 name
 =
 "
+preferences_toolbar_shortcut
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+gestures
+based
+actions
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_toolbar_select_shortcut
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+gestures
+based
+actions
+-
+-
+>
+<
+string
+name
+=
+"
 preferences_gestures
 "
 >
