--- a/mobile/android/fenix/app/src/main/res/values-ia/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-ia/strings.xml
@@ -46841,6 +46841,75 @@ form
 autofill
 feature
 .
+The
+Townland
+field
+specific
+to
+Ireland
+is
+a
+specific
+type
+of
+land
+division
+used
+in
+rural
+areas
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addresses_townland
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Division
+de
+territorio
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+an
+address
+field
+(
+e
+.
+g
+.
+mailing
+address
+)
+used
+as
+part
+of
+the
+form
+autofill
+feature
+.
 This
 specific
 field
