--- a/mobile/android/fenix/app/src/main/res/values-pa-rIN/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-pa-rIN/strings.xml
@@ -1268,6 +1268,62 @@ string
 !
 -
 -
+Description
+of
+private
+browsing
+mode
+displayed
+to
+users
+on
+the
+homepage
+when
+they
+enable
+private
+mode
+.
+%
+1
+s
+is
+the
+name
+of
+the
+app
+(
+for
+example
+"
+Firefox
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+felt_privacy_info_card_subtitle_3
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Clickable
 portion
 of
